@@ -6,6 +6,7 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 - Fixed RPC delete_bulk not working at all
 - Added REST and RPC update_bulk tests
 - Removed useless RPC index action
+- Fixed static configured page attribute not being used (RT#56226)
 
 2.002002  2010-08-03 14:40:50 Europe/Vienna
 
